src/opensync_member.h

//#include <unistd.h>

OSyncMember *osync_member_new(OSyncGroup *group);
osync_bool osync_member_instance_plugin(OSyncMember *member, OSyncPlugin *plugin);
osync_bool osync_member_set_name(OSyncMember *member, char *name);
char *osync_member_get_name(OSyncMember *member);
char *osync_member_get_configdir(OSyncMember *member);
osync_bool osync_member_set_configdir(OSyncMember *member, char *path);
osync_bool osync_member_get_config(OSyncMember *member, char **data, int *size);
osync_bool osync_member_set_config(OSyncMember *member, char *data, int size);
osync_bool osync_member_initialize(OSyncMember *member);