src/opensync_group.h

OSyncGroup *osync_group_new(OSyncEnv *osinfo);
void osync_group_set_name(OSyncGroup *group, char *name);
char *osync_group_get_name(OSyncGroup *group);
void osync_group_save(OSyncGroup *group);
void osync_group_add_member(OSyncGroup *group, OSyncMember *member);
OSyncMember *osync_group_get_nth_member(OSyncGroup *group, int nth);
int osync_group_num_members(OSyncGroup *group);
char *osync_group_get_configdir(OSyncGroup *group);
void osync_group_set_configdir(OSyncGroup *group, char *path);